fixed font-size and fixed overlapping of button

--- a/css/about.css
+++ b/css/about.css
@@ -41,7 +41,7 @@
 @media(max-width: 768px) {
   .about-text {
     padding-bottom: 100px;
-    font-size: 1em;
+    font-size: 1.1em;
   }
 }
 
