--- a/css/personal.css
+++ b/css/personal.css
@@ -58,7 +58,7 @@
   }
 
   .about-text__item {
-    font-size: 0.8em;
+    font-size: 1em;
   }
 }
 
