--- a/css/trial-page.css
+++ b/css/trial-page.css
@@ -12,6 +12,6 @@
 /* ADAPTIVE LAYOUT */
 @media(max-width: 768px) {
   .trial-text {
-    font-size: 1em;
+    font-size: 1.2em;
   }
 }
